acknowledgements and vita

--- a/Acknowledge.tex
+++ b/Acknowledge.tex
@@ -5,4 +5,14 @@
 
 \centerline{\bf \large ACKNOWLEDGMENTS}
 \vskip 10mm % Edit everything below with your acknowledging text.
-This page is where you would acknowledge all those who helped you with your academic research.
+Without the support and encouragement of many people, I would not have produced this work. So you can blame them for any mistakes.
+
+Producing this thesis spanned about three years, during which time I started working full time as a software developer, moved twice, and had a wonderful daughter. Without my wife's love, support, and encouragement, I would have given up. Maggie was always there to center me and help nudge me along, and I am grateful to have her in my life. I wanted to accomplish something difficult in order to set a positive example for our daughter, Ellie. I am convinced Ellie wanted this, too. She had no control over whether I would accomplish it, but she could certainly make it more difficult! She made sure it was a very positive example that I set. Much of Chapters Three and Five benefited from her very vocal criticism, and I dedicate them to her.
+
+This particular journey began in the philosophy classroom, where I learned about modal logic from Zac Ernst. I had enjoyed the formalisms of proofs since learning geometry in middle school, and my interest in propositional and predicate logic was similarly high, but modal logic, with its weird possible worlds semantics, delivered by an engaging instructor like Zac, lit a spark in me. Paul Weirich introduced me to game theory, also from the philosophy classroom, and there may be no better instructor of what it is to be a rational agent. I sometimes wonder if he isn't the ideally rational agent that economists speak of. I later swapped Zac and Paul and had Zac teach me decision theory and Paul teach me more modal logic. I am one of the luckiest students to have benefited from both of their mentorship in these areas. After reading this thesis, you might wonder how I didn't turn out better, and you'd be right to so wonder.
+
+Other professors in the University of Missouri Philosophy Department introduced me to subjects that I devoured and regurgitated in the present thesis, including Peter Markie's expert and truly world class instruction on epistemology. I must say that any mistake in this thesis concerning epistemology is my own, and he is blameless. I like to think that in a nearby possible world, I my counterpart continued to study epistemology under Peter Markie's counterpart. And in that possible world, Academia is a valued and respected institution, with rich and ample state support. Perhaps it is not so nearby. In any case, I sometimes envy my counterpart there, learning from one of our generation's best analytic epistemologists.
+
+But I do not envy him so much as to risk wishing for a swap. In this world I have my wife and daughter, and Zac Ernst convinced me that it is possible to focus on modal logic as a PhD thesis, but that doing so requires a transfer to the computer science department. A mentor trifecta swirled around me there, with Bill Harrison, Rohit Chadha, and Alwyn Goodloe teaching me the difference between philosophy and computer science. Without all three of these researchers taking a chance on me, I would not have finished.
+
+Bill took a chance on me by accepting me as a graduate student and forcing open whatever bureaucratic doors threatened to close on me, and I am grateful to him for this. Alwyn selected a mostly-philosophy grad student for a NASA aerospace engineering internship, and Rohit agreed to let me pursue the topics developed in that internship as dissertation. I am sincerely grateful for their support as I struggled to steer my mental ship from a philosophy heading to a computer science heading.
