--- a/Chapter_02.tex
+++ b/Chapter_02.tex
@@ -9,7 +9,7 @@ This chapter describes the context in which this dissertation makes advances. Se
 
 \section{Game Theory}~\label{sec:gametheory}
 
-This section presents the basics of game theory in order to motivate the model of agency that \DASL\ seeks to formally capture. However, this dissertation does not seek to make advances in game theory itself. Future research could take the resulting logic and use it as a new foundation for game theoretic reasoning among more realistic agents, but that task is not taken on in the present work. We begin this section with a brief overview and an example game, and then present the model of agency required for the standard solution to the game.
+This section presents the basics of game theory in order to motivate the model of agency that \DASL\ seeks to formally capture. However, this dissertation does not seek to make advances in game theory itself. Indeed, the fundamental reasoning powers of ideal agents from game theory are the same as those of the ideal agents in decision theory. For our purposes, we are interested in the idealized powers of such agents, not the contexts in which they are reasoning. Future research could take the resulting logic and use it as a new foundation for game theoretic reasoning, or decision theoretic reasoning, among more realistic agents, but that task is not taken on in the present work. We seek a more realistic model of agency than that underlying game and decision theory. We begin this section with a brief overview and an example game, and then present the model of agency required for the standard solution to the game, in order to flush out the idealizations in the model.
 
 Game theory is a mathematical model for strategic reasoning. Strategic reasoning refers to the way an agent reasons in situations where her payoffs depend on the actions of other agents in addition to her own, and in which she knows about these dependencies. For turn-based games, the mathematical structure employed is a \emph{game tree}, where each node represents a player's turn, and each edge the transition via a player's action. The leaves of the tree represent the payoffs each player receives at the end of the game. This paper is not concerned with the games themselves, but rather with the underlying assumptions about agency that entail their solutions. We briefly illustrate these underlying assumptions with the following example.
 
