--- a/Vita.tex
+++ b/Vita.tex
@@ -3,5 +3,9 @@
 
 \centerline{\bf \large VITA}
 \vskip 10mm % Edit everything below with your acknowledging text.
-This is a summary of your {\it professional} life, and should be written appropriately.  This can be written in the following order:  where your where born, what undergraduate university you graduated from, if you received a masters, and which institution you graduated from with your PhD (University of Missouri).  You can describe when you began research with your current advisor. \par
-In another paragraph, you could say if/when you were married, what the name of your kids are, and what your plans are for after graduation if you choose.  Take a look at other vita's from other dissertations for examples.
+
+I was born in Ames, Iowa, in 1986. I attended the University of Missouri in 2004, from which I received a Bachelor of Arts degree in English and a Bachelor of Arts degree in philosophy in 2009. After a one year hiatus tutoring, I returned, and received a Master of Arts degree in philosophy in 2012. I then transferred to the University of Missouri School of Engineering to study computer science under the supervision of Dr. Bill Harrison, and received a Master of Science in 2016. I graduated with a Doctor of Philosophy degree in 2019.
+
+In 2013, I worked as an intern under Dr. Zac Ernst at a company called Adventur.es, in Columbia, Missouri. Zac taught me to program in Python, and introduced me to machine learning and automated theorem proving. In 2014, I interned for NASA as a Langley Aerospace Research Student Scholar, under the supervision of Dr. Alwyn Goodloe. In 2016, I began focusing on the theory and application of epistemic logic under the doctoral supervision of Dr. Rohit Chadha.
+
+I married Maggie in 2014, and in 2018 we had our amazing daughter, Ellie.
