final edits for submission

--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -1,12 +1,13 @@
 \newpage
 \addcontentsline{toc}{chapter}{BIBLIOGRAPHY}
 
-\bibliographystyle{unsrt}
+%\bibliographystyle{unsrt}
 %\bibliography{bibtex_entries}
 \begin{thebibliography}{9}
 		\bibitem{ArtemovNogina}
 		Artemov, S.; Nogina, E. ntroducing Justification into Epistemic Logic. {\em Journal of Logic and Computation } 15. 1059-1073. (2005). 
-	
+		\bibitem{Aumann}
+		Aumann, R. "Interactive epistemology I: knowledge." International Journal of Game Theory 28.3 (1999): 263-300.
 	 	\bibitem{faa} Federal Aviation Administration \\ website: https://www.faasafety.gov/files/gslac/library\\/documents/2012/Nov/71574/DirtyDozenWeb3.pdf,\\
 	 	retrieved 10/5/2016.
 	 	\bibitem{boeing} Rankin, William. ``MEDA Investigation Process", Aero Quarterly.\\ Website: Boeing.com/commercial/aeromagazine/articles/qtr\_2\_07/aero\_q207\_article3.pdf,
@@ -216,8 +217,7 @@
 	 	\bibitem{puislescanne}
 	 	Lescanne, P.; Puiss\'egur, J. "Dynamic logic of common knowledge in a proof assistant." arXiv preprint arXiv:0712.3146 (2007).
 	 	
-	 	\bibitem{Aumann}
-	 	Aumann, R. "Interactive epistemology I: knowledge." International Journal of Game Theory 28.3 (1999): 263-300.
+	 	
 	 	
 	 	\bibitem{hwang}
 	 	Hwang, M.; Lin, J. ``Information dimension, information overload and decision quality." Journal of Informatin Science 25 (1999): 213-218.
