--- a/ThesisMaster.tex
+++ b/ThesisMaster.tex
@@ -27,6 +27,7 @@
 \usepackage{amssymb}
 \usepackage{graphicx}
 \usepackage{mathrsfs}
+\usepackage[all]{nowidow}
 
 \usepackage{mathrsfs}
 \usepackage{nd3}
