--- a/Vita.tex
+++ b/Vita.tex
@@ -8,4 +8,4 @@ I was born in Ames, Iowa, in 1986. I attended the University of Missouri in 2004
 
 In 2013, I worked as an intern under Dr. Zac Ernst at a company called Adventur.es, in Columbia, Missouri. Zac taught me to program in Python, and introduced me to machine learning and automated theorem proving. In 2014, I interned for NASA as a Langley Aerospace Research Student Scholar, under the supervision of Dr. Alwyn Goodloe. In 2016, I began focusing on the theory and application of epistemic logic under the doctoral supervision of Dr. Rohit Chadha.
 
-I married Maggie in 2014, and in 2018 we had our amazing daughter, Ellie.
+I married Maggie in 2014, and in 2018 we had our amazing daughter, Ellie. We live in St. Louis, Missouri.
